Removed Arrays.asList call with too few arguments